--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             Your browser does not support the video tag.
           </video>
         </div>
+        <div class='info'>
+          We’ve found an incredible location to start our first satellite campus. We’re reclaiming a breezy, light filled temporary structure, its only somewhat suited to be a work environment. No one has ever done desk work here before!!! Be the first to co-work in this physically marginalized space.
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
